--- a/css/post.css
+++ b/css/post.css
@@ -319,6 +319,7 @@ pre .line-numbers {
         padding: 2px 8px;
     }
 }
+/*
 .download-wrapper {
     margin: 2rem 0;
     padding: 1.5rem;
@@ -388,3 +389,4 @@ pre .line-numbers {
     font-size: 0.9rem;
     color: #666;
 }
+*/
